Inwrd Bht Issue Signed-off-by: Dushan Maduranga <Dushan Maduranga>

--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -509,6 +509,9 @@
                                             </f:facet>
                                         </p:cellEditor>
                                     </p:column>
+                                    <p:column headerText="Net Rate">
+                                        <h:outputLabel value="#{bip21.netRate}" />
+                                    </p:column>
                                     <p:column headerText="Vat">
                                         <h:outputLabel value="#{bip21.vat}" />
                                     </p:column>
