--- a/src/main/webapp/inward/inward_bill_intrim_finalized_error_correction.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim_finalized_error_correction.xhtml
@@ -291,11 +291,17 @@
 
                             <p:dataTable id="pharmacy" value="#{bhtSummeryFinalizedController.pharmacyItems}" var="iss" 
                                          sortBy="#{iss.bill.deptId}">
-                                <p:column headerText="Bill No">
+                                <p:column headerText="ID">
                                     <f:facet name="header">
-                                        <h:outputLabel value="ID No"/>
+                                        <h:outputLabel value="ID"/>
                                     </f:facet>
                                     <h:outputLabel value="#{iss.id}"/>                                    
+                                </p:column>                  
+                                <p:column headerText="Bill No">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Bill No"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{iss.bill.deptId}"/>                                    
                                 </p:column>                  
                                 <p:column headerText="Item Name">
                                     <f:facet name="header">
