--- a/src/main/webapp/resources/pharmacy/inward/returnBill.xhtml
+++ b/src/main/webapp/resources/pharmacy/inward/returnBill.xhtml
@@ -171,7 +171,7 @@
                             </td>
                             
                             <td>
-                                <h:outputLabel    value="#{bip.netRate}"    styleClass="itemsBlock"  >
+                                <h:outputLabel    value="#{bip.netValue}"    styleClass="itemsBlock"  >
                                     <f:convertNumber pattern="#,##0.00" />
                                 </h:outputLabel>
                             </td>
