Ward BHT Issue Privillages Signed-off-by: Dushan Maduranga <Dushan Maduranga>

--- a/src/main/webapp/opd_service.xhtml
+++ b/src/main/webapp/opd_service.xhtml
@@ -181,10 +181,10 @@
                     </h:panelGrid>
                 </p:panel>
 
-                <p:panel >
+<!--                <p:panel >
                     <p:media value="http://www.youtube.com/v/KZnUr8lcqjo" width="420" height="315" player="flash"/>
 
-                </p:panel>
+                </p:panel>-->
 
             </h:form>
 
