add vat for selected items Signed-off-by: arunawijesinghe <acswijesinghe91@gmail.com>

--- a/src/main/webapp/dataAdmin/admin_data_administration.xhtml
+++ b/src/main/webapp/dataAdmin/admin_data_administration.xhtml
@@ -76,6 +76,7 @@
                                 <p:commandLink ajax="false" action="#{serviceSummery.findFeeTypeLessBillFees}" rendered="true"
                                                value="18. Check BillFees Without Fee Type"  onclick="if (!confirm('Really want to do that?'))
                                                            return false"/>
+                                <p:commandLink ajax="false" value="19. Investigatio/Services"  action="item_list_for_vat"/>
 
                             </p:panelGrid>
 
