Channel Sedule Summery rEPORT Signed-off-by: Dushan Maduranga <Dushan Maduranga>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -112,6 +112,9 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" 
                                                          value="Entered Shedule Report" action="/channel/channel_report_channel_shedule" 
                                                          actionListener="#{sheduleController.makeNull()}" />                                        
+                                        <p:commandButton styleClass="linkButton" ajax="false" 
+                                                         value="Entered Shedule Report Summery" action="/channel/channel_report_channel_shedule_sumery" 
+                                                         actionListener="#{sheduleController.makeNull()}" />                                        
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
