Channel Area Report Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/pharmacy/purhcase.xhtml
+++ b/src/main/webapp/resources/pharmacy/purhcase.xhtml
@@ -51,7 +51,7 @@
                     <h:outputLabel value="Supplier"/>
                     <h:outputLabel value="#{cc.attrs.bill.fromInstitution.name}"/>
 
-                    <h:outputLabel value="Purchase Time"/>
+                    <h:outputLabel value="Purchase Date"/>
                     <h:outputLabel value="#{cc.attrs.bill.createdAt}">
                         <f:convertDateTime pattern="dd MM yyyy"/>
                     </h:outputLabel>
