--- a/src/main/webapp/resources/pharmacy/inward/issueBill_request.xhtml
+++ b/src/main/webapp/resources/pharmacy/inward/issueBill_request.xhtml
@@ -35,7 +35,7 @@
             </div>
 
             <div class="headingBill">
-                <h:outputLabel value="Issue Bill"   />    
+                <h:outputLabel value="Issue Request Bill"   />    
                 <h:outputLabel value="**Duplicate**"  rendered="#{cc.attrs.duplicate eq true}" /> 
                 <h:outputLabel value="**Cancelled**"  rendered="#{cc.attrs.bill.cancelled eq true}" /> 
             </div>
@@ -51,7 +51,7 @@
                             <h:outputLabel value="Date" class="billDetails" ></h:outputLabel>
                         </td>
                         <td>:</td>
-                        <td style="width: 30%;text-align: left;" >
+                        <td style="width: 30%" >
                             <!--<h:outputLabel value=": &npsp;" ></h:outputLabel>-->
                             <h:outputLabel value="#{cc.attrs.bill.createdAt}" class="billDetails" >
                                 <f:convertDateTime pattern="dd/MM/yy" ></f:convertDateTime>
@@ -106,7 +106,7 @@
                                 <h:outputLabel value="BHT" ></h:outputLabel>
                             </td>
                             <td>:</td>
-                            <td style="width: 30%;text-align: left;" >
+                            <td style="width: 30%;" >
                                 <h:outputLabel value="#{cc.attrs.bill.patientEncounter.bhtNo}"  >
                                 </h:outputLabel>
                             </td>
