--- a/src/main/webapp/reportIncome/report_income.xhtml
+++ b/src/main/webapp/reportIncome/report_income.xhtml
@@ -20,7 +20,8 @@
                                 <p:panel header="1) With Credit" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Institution" action="report_income_with_credit_by_institution"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="By Department" action="report_income_with_credit_by_department"/>                                
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="By Department (Reported)" action="report_income_with_credit_by_department"/>                                
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="By Department (Billed)" action="report_income_with_credit_by_department_billed"/>                                
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Institution Bill Count" action="report_income_with_credit_by_institution_for_build_bills"/>                                
                                     </h:panelGrid>
                                 </p:panel>
