--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -74,7 +74,7 @@
                                 </p:panel>
                                 <p:panel header="6)Income" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                     <p:panelGrid columns="1" styleClass="alignTop">
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="1)Report 1" action="income_summery"/> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="1)Income Summery" action="income_summery"/> 
                                         
                                     </p:panelGrid>
                                 </p:panel>
