Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -21,11 +21,12 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="5)Report by Collection Centre(Summery)" action="report_lab_collection_centre_summery.xhtml"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="6)Report by Collection Centre Count" action="report_lab_by_collection_centre_investigation_count.xhtml"/>                            
                                         <p:commandButton styleClass="linkButton" ajax="false" value="7)Report by Collection Centre Count(Summery)" action="report_lab_by_collection_centre_investigation_count_summery"/>                            
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="8)Report by Referring Doctor" action="report_lab_by_refering_doctor.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="9)Report Summary Department" action="report_cashier_detailed_by_department.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="10)Report Summary by day" action="report_lab_by_date_summery.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="11)Investigation Summary Fee Type" action="report_investigation_summery_by_feetype"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="12)Investigation Summary Regent Fee" action="report_investigation_summery_by_regent_fee"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="8)Report by Referring Doctor(Details)" action="report_lab_by_refering_doctor.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="9)Report by Referring Doctor(Summery)" action="report_lab_by_refering_doctor_summery.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="10)Report Summary Department" action="report_cashier_detailed_by_department.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="11)Report Summary by day" action="report_lab_by_date_summery.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="12)Investigation Summary Fee Type" action="report_investigation_summery_by_feetype"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="13)Investigation Summary Regent Fee" action="report_investigation_summery_by_regent_fee"/>
 
                                     </p:panelGrid>
                                 </p:panel>
