--- a/src/main/webapp/report_lab_by_refering_doctor.xhtml
+++ b/src/main/webapp/report_lab_by_refering_doctor.xhtml
@@ -124,7 +124,7 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Net Value"/>
                             </f:facet>
-                            <h:outputLabel value="#{d.netValue+d.vat}">
+                            <h:outputLabel value="#{d.netValue}">
                                 <f:convertNumber pattern="#,###,##0.00" />
                             </h:outputLabel>
                             <f:facet name="footer">
