--- a/src/main/webapp/reportLab/report_lab_by_refering_doctor_summery.xhtml
+++ b/src/main/webapp/reportLab/report_lab_by_refering_doctor_summery.xhtml
@@ -26,22 +26,6 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{commonReport1.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" >
                         </p:calendar>
-                        <h:outputLabel value="Referring Doctor"/>
-                        <p:autoComplete forceSelection="true" id="cmbDoc" value="#{commonReport1.referringDoctor}"
-                                        completeMethod="#{doctorController.completeDoctor}"
-                                        var="ix"
-                                        itemLabel="#{ix.person.name}" 
-                                        itemValue="#{ix}" 
-                                        style="width: 400px;">
-                        </p:autoComplete>
-
-                        <h:outputText value="Department" ></h:outputText>
-                        <p:autoComplete value="#{commonReport1.department}"
-                                        completeMethod="#{departmentController.completeDept}"
-                                        var="dept"
-                                        itemLabel="#{dept.name}"
-                                        itemValue="#{dept}"
-                                        style="width: 400px;"></p:autoComplete>
 
                     </h:panelGrid>
                     <h:panelGrid columns="4">
@@ -49,7 +33,7 @@
                         <p:commandButton value="Process"
                                          ajax="false" style="float: right;"
                                          styleClass="noPrintButton"
-                                         action="#{commonReport1.listBillItemsByReferringDoctor}"
+                                         action="#{commonReport1.listBillItemsByReferringDoctorSummery}"
                                          />
                         <p:commandButton ajax="false" value="Print"  styleClass="noPrintButton" style="float: right;" >
                             <p:printer target="panelPrint" />
@@ -64,8 +48,7 @@
 
                 </p:panel>
                 <p:panel  id="panelPrint" styleClass="noBorder summeryBorder">
-                    <p:dataTable id="tbl" value="#{commonReport1.referralBillItems}" var="d" 
-                                 rowStyleClass="#{d.bill.billClassType eq 'CancelledBill' or d.bill.billClassType eq 'RefundBill' ? 'redText':''}" 
+                    <p:dataTable id="tbl" value="#{commonReport1.docTotals}" var="d" rowIndexVar="i"
                                  >
                         <f:facet name="header">
                             <h:outputLabel value="Requests by Referring Doctor "/>
@@ -81,50 +64,29 @@
                             </h:outputLabel>
                         </f:facet>
 
-                        <p:column headerText="Bill No" 
-                                  sortBy="#{d.bill.insId}">
+                        <p:column >
                             <f:facet name="header">
-                                <h:outputLabel value="Bill No"/>
+                                <h:outputLabel value="No"/>
                             </f:facet>
-                            <h:outputLabel value="#{d.bill.insId}"/>
-                            <h:outputLabel value=" - #{d.bill.billedBill.insId}" rendered="#{d.bill.billedBill ne null}"/>
+                            <h:outputLabel value="#{i+1}"/>
                             <f:facet name="footer">
                                 <h:outputLabel value="Total"/>
                             </f:facet>
                         </p:column>
 
-                        <p:column headerText="Referring Doctor" rendered="#{commonReport1.referringDoctor eq null}" >
+                        <p:column >
                             <f:facet name="header">
                                 <h:outputLabel value="Referring Doctor" />
                             </f:facet>
-                            <h:outputLabel value="#{d.bill.referredBy.person.name}"/>
+                            <h:outputLabel value="#{d.doctor.person.name}"/>
                         </p:column>
 
 
-                        <p:column headerText="Date/Time" 
-                                  sortBy="#{d.bill.createdAt}">
-                            <f:facet name="header">
-                                <h:outputLabel value="Date/Time"/>
-                            </f:facet>
-                            <h:outputLabel value="#{d.bill.createdAt}">
-                                <f:convertDateTime pattern="yyyy MMM dd hh:mm a" ></f:convertDateTime>
-                            </h:outputLabel>
-                        </p:column>
-
-
-                        <p:column headerText="Item" sortBy="#{d.item.name}">
-                            <f:facet name="header">
-                                <h:outputLabel value="Item"/>
-                            </f:facet>
-                            <h:outputLabel value="#{d.item.name}">
-                            </h:outputLabel>
-                        </p:column>
-
-                        <p:column headerText="Net Value" styleClass="numberCol" >
+                        <p:column styleClass="numberCol" >
                             <f:facet name="header">
                                 <h:outputLabel value="Net Value"/>
                             </f:facet>
-                            <h:outputLabel value="#{d.netValue+d.vat}">
+                            <h:outputLabel value="#{d.total}">
                                 <f:convertNumber pattern="#,###,##0.00" />
                             </h:outputLabel>
                             <f:facet name="footer">
